# wishlist

./: .env.templ  .gitignore  .surrealdb  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.preprod.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy-dev.yml  deploy-preprod.yml  deploy-prod.yml  deploy.yml  publish-docker-img.yml
db/migrations/definitions/: _initial.json
db/schemas/: user.surql
src/: auth.rs  db.rs  main.rs  template.rs
src/controller/: mod.rs
templates/: login.html  signin.html  signup.html
