[package]
name = "wishlist"
authors = ["Allan JARRY <jarry.allan@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A website to share wishlists with friends."
repository = "https://github.com/AllanJRY/wishlist"

# todo : fill readme, license, homepage, and documentation keys once available.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
once_cell = "1.18.0"
serde = { version = "1.0.192", features = ["derive"] }
time = "0.3.30"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["fs"] }
